--- a/templates/compareprice/index.html
+++ b/templates/compareprice/index.html
@@ -9,7 +9,7 @@
 		
 </head> 
 		<body>
-			<h1>Comparer les prix</h1>
+			<h1>Titre : {{ scr_title }}</h1>
 				<div>
 					hey there partner! <br />
 					<strong>{{ boldmessage }}</strong><br />
