--- a/templates/compareprice/page.html
+++ b/templates/compareprice/page.html
@@ -1,4 +1,3 @@
-{% extends 'compareprice/index.html' %}
-
-{% block content %}
-{% endblock content %}
+ {% extends 'compareprice/index.html' %} 
+ {% block content %} <a href= "http://medicalxpress.com/news/2016-05-pfizer-blocking-drugs-lethal.html"> Pfizer says it's blocking use of drugs for lethal injections</a></br><a href= "http://www.scientificamerican.com/article/a-river-once-ran-through-the-sahara-graphic/"> A River Once Ran through the Sahara [Graphic] - Scientific American</a></br><a href= "http://www.naturalhealth365.com/blueberries-heart-health-1827.html"> Blueberries show surprising health benefits | NaturalHealth365</a></br><a href= "http://www.eurekalert.org/pub_releases/2016-05/giot-lso050816.php"> Large-scale study of Super Storm Sandy utility damage shows 'small' failures, big impact | EurekAlert! Science News</a></br><a href= "http://www.eurekalert.org/pub_releases/2016-05/uop-oof050916.php"> Opinions on fracking linked to political persuasion, says new study | EurekAlert! Science News</a></br><a href= "http://www.eurekalert.org/pub_releases/2016-05/hzm--hfh050916.php"> How fasting helps fight fatty liver disease | EurekAlert! Science News</a></br>
+ {% endblock content %} 
