edit the template

--- a/templates/bs.html
+++ b/templates/bs.html
@@ -76,14 +76,14 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Bonjour</h2>
+          <h2>Meilleur Prix</h2>
           <canvas id="canvas" height="450" width="610"></canvas>
           <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Testing</h2>
+          <h2>Liens Directs</h2>
 					{% if products %}
             <ul>
                 {% for p in products %}
@@ -102,7 +102,7 @@
 
       <!-- Site footer -->
       <footer class="footer">
-        <p>&copy; 2015 Company, Inc.</p>
+        <p>&copy; 201 Belheber, Inc.</p>
       </footer>
 <script>
   Chart.defaults.global.responsive = true;
